<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plotador de Horas</string>
    <string name="tela_cadastro_name">Cadastro de Atividade</string>
    <string name="hello_world">Hello world!</string>
    <string name="cadastro">Cadastrar Atividade</string>
    <string name="Cadastro">Cadastro</string>
    <string name="nome_atividade">Nome da Atividade</string>
    <string name="tempo_atividade">Tempo da Atividade</string>
    <string name="data_atividade">Data da Atividade</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="botao_voltar_atividade">Voltar</string>
    <string name="botao_gerar_grafico">Grafico</string>
    <string name="atividade_semana">Atividades da Semana</string>
    <string name="mes_atividade">Mês</string>
    <string name="semana_atividade">Semana</string>
    <string name="gera_relatorio_atividade_semana">Gera Relatorio</string>
    <string name="gera_relatorio">Relatorio de Atividades</string>
    <string name="gera_historico">Historico de Atividades</string>
    <string name="botao_voltar_relatorio">Voltar</string>
    <string name="gerenciador_atividade">Gerenciador de Atividades</string>
    <string name="atividade_da_semana">Atividades da Semana</string>
    <string name="minutos">Minutos</string>
    <string name="atividade">Atividade</string>
    <string name="porcentagem">%</string>
    <string name="title_activity_cadastrar_min_so_pra_teste">CadastrarMinSoPraTeste</string>
    <string name="title_activity_relatorio_semana">Relatorio Semanal de Atividades</string>
    <string name="title_activity_relatorio_da_semana">RelatorioDaSemana</string>
    <string name="title_activity_historico">Historico</string>
    <string name="gerar_grafico">Gerar Gráfico</string>
    <string name="radio_alta">Alta</string>
    <string name="radio_media">Normal</string>
    <string name="radio_baixa">Baixa</string>
    <string name="prioridade">Prioridade</string>

    <string-array name="meses_ano">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    
    <string-array name="semanas_ano">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
