<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >


    <TextView
        android:id="@+id/mesAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/semanaMes"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:text="@string/mes_atividade" />

    <TextView
        android:id="@+id/semanaAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/semanaMes"
        android:layout_alignLeft="@+id/mesAtividade"
        android:text="@string/semana_atividade" />
    
     <Spinner
        android:id="@+id/semanaMes"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/mesesAno"
        android:layout_below="@+id/mesesAno"
        android:layout_marginTop="41dp" />

    <Button
        android:id="@+id/botaoGeraRelatorioAtividade"
        android:layout_width="200dp"
        android:layout_height="55dp"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="325dp"
        android:text="@string/gera_relatorio_atividade_semana" />

    <Button
        android:id="@+id/botaoVoltar"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp"
        android:text="@string/botao_voltar_relatorio" />

    <Button
        android:id="@+id/botaoHistoricoComparativo"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:text="@string/gera_historico" />

    <TextView
        android:id="@+id/TextAtividadeSemana"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/atividade_semana" />

    <Spinner
        android:id="@+id/mesesAno"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/TextAtividadeSemana"
        android:layout_below="@+id/TextAtividadeSemana" />
    
</RelativeLayout>