<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/nomeAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="41dp"
        android:text="@string/nome_atividade" />

    <TextView
        android:id="@+id/dataAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTempoAtividade"
        android:layout_below="@+id/editTempoAtividade"
        android:text="@string/data_atividade" />

    <Button
        android:id="@+id/botaoVoltarAtividade"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/botao_voltar_atividade" />

    <Button
        android:id="@+id/botaoCadastrar"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/botao_cadastrar" />

 	<EditText
        android:id="@+id/editDataAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dataAtividade"
        android:layout_below="@+id/dataAtividade"
        android:ems="10"
        android:inputType="date" >

      
    </EditText>

 	<TextView
 	    android:id="@+id/tempoAtividade"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/nomeAtividade"
 	    android:layout_below="@+id/nomeAtividade"
 	    android:layout_marginTop="42dp"
 	    android:text="@string/tempo_atividade" />

 	<EditText
 	    android:id="@+id/editTempoAtividade"
 	    android:layout_width="100dp"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/tempoAtividade"
 	    android:layout_below="@+id/tempoAtividade"
 	    android:ems="10"
 	    android:inputType="number" >

 	    
 	</EditText>

 	<AutoCompleteTextView
 	    android:id="@+id/autoCompleteNome"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/nomeAtividade"
 	    android:layout_below="@+id/nomeAtividade"
 	    android:ems="10" ><requestFocus />
 	</AutoCompleteTextView>
 	
</RelativeLayout>