<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/gerenciador_atividade"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cadastroAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:height="45sp"
        android:text="@string/Cadastro"
        android:width="250sp" />

    <Button
        android:id="@+id/botaoRelatorioAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:height="45sp"
        android:text="@string/gera_relatorio"
        android:width="250sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="125dp"
        android:layout_height="110dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_launcher" />

</LinearLayout>